--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,12 +24,15 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/tictactoe.jar
+dist.jar=${dist.dir}/TicTacToeSocket.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AnimatonClass.jar=C:\\Users\\52333\\Desktop\\Interfaz Java\\AnimatonClass.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AnimatonClass.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tictactoe.Tictactoe
+main.class=Frame.IniciarSesion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
